<resources>
    <string name="app_name">camisetas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_camisetas_list">BarrioPrint</string>
    <string name="title_camiseta_detail">Detalle</string>
    <string name="title_camiseta_form">Formulario</string>
    <string name="title_sample_one">Ejemplo Uno</string>
    <string name="title_sample_two">Ejemplo Dos</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Buscador</string>
    <string name="title_logout">Logout</string>

    <string name="menu_camisetas">Camisetas</string>
    <string name="menu_sample_one">Ejemplo 1</string>
    <string name="menu_sample_two">Ejemplo 2</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Buscador</string>
    <string name="menu_logout">Logout</string>

    <string name="action_add">Anadir</string>
    <string name="nav_header_avatar">Avatar</string>
    <string name="user_default">Usuario</string>

    <string name="detail_image">Imagen</string>
    <string name="detail_not_found">Elemento no encontrado</string>
    <string name="detail_price_format">Precio: $%1$.2f</string>
    <string name="detail_id_format">ID: %1$d - Posicion: %2$d</string>
    <string name="detail_description_format">Detalles extendidos de %1$s.</string>
</resources>